# crunch

./: .gitignore  .gitmodules  Cargo.toml  clienthello.txt  dummy.sh  run_demo.sh  serverhello.b64  serverhello.txt
crunch/: Cargo.toml  rfc8448_sec3_01_clienthello.txt
crunch/src/: aead_aes_128_gcm.rs  bin.rs  dummy_active_key_exchange.rs  dummy_crypto_provider.rs  dummy_hkdf.rs  dummy_hkdf_expander.rs  dummy_secure_random.rs  dummy_server_cert_verifier.rs  dummy_supported_kx_group.rs  hash_reporter.rs  hash_sha256.rs  hdkf_from_intermediates.rs  hmac_sha256.rs  lib.rs  main.rs  println_key_log.rs  verify.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
src/: aead_aes_128_gcm.rs  dummy_active_key_exchange.rs  dummy_crypto_provider.rs  dummy_hkdf.rs  dummy_hkdf_expander.rs  dummy_key_provider.rs  dummy_secure_random.rs  hash_sha256.rs  main.rs
uncrunch/: Cargo.toml
uncrunch/src/: main.rs
