[package]
name = "crunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.1"
hex = "0.4.3"
rustls = "0.23.0"
tls_codec = "0.4.1"
tls-parser = "0.11.0"
p256 = "0.13.2"
sha2 = "0.10.8"
base64 = "0.21.7"
aes-gcm = "0.10.3"
typenum = "1.17.0"
