[package]
name = "crunch2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
block-buffer = "0.10.4"
der = "0.7.8"
hex = "0.4.3"
hmac = "0.12.1"
rsa = { version = "0.9.6", features = ["sha2"], default-features = false }
rustls = { version = "0.22.2", default-features = false, features = ["logging"] }
sha2 = "0.10.8"
webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc"], default-features = false }
webpki-roots = "0.26.1"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
