[package]
name = "crunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
block-buffer = "0.10.4"
der = "0.7.8"
env_logger = "0.11.2"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.21"
rsa = { version = "0.9.6", features = ["sha2"], default-features = false }
rustls = { path = "../rustls/rustls", default-features = false, features = ["logging"] }
sha2 = { version = "0.10.8", features = ["compress"] }
webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc"], default-features = false }
webpki-roots = "0.26.1"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
