[package]
name = "crunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli", "rfc8448"]
cli = ["dep:env_logger"]
rfc8448 = []
uncrunch = []

[lib]
name = "crunch"
path = "src/lib.rs"

[[bin]]
name = "crunch"
path = "src/bin.rs"

[dependencies]
aes-gcm = "0.10.3"
block-buffer = "0.10.4"
der = "0.7.8"
env_logger = { version = "0.11.2", optional = true }
hex = "0.4.3"
hkdf = "0.12.4"
hmac = "0.12.1"
log = "0.4.21"
rsa = { version = "0.9.6", features = ["sha2"], default-features = false }
rustls = { path = "../rustls/rustls", default-features = false, features = ["logging"] }
serde = "1.0.197"
sha2 = { version = "0.10.8", features = ["compress"] }
webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc"], default-features = false }
webpki-roots = "0.26.1"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
